--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@google/genai": "^1.9.0",
-    "@tailwindcss/browser": "^4.1.10"
+    "@google/genai": "^1.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
